www/css/style.css
* {
  padding:0;
  margin:0;
  font-family: 'Roboto', sans-serif;
}

.clearfix {
  overflow: auto;
}

.education-entry, .work-entry, .project-entry {
  padding-left: 5%;
  padding-right: 5%;
}

h1 {
  font-size: 40px;
  color: #F5A623;
  line-height: 48px;
  display: inline;
}

h2 {
  font-weight: bold;
  font-size: 24px;
  color: #999999;
  line-height: 29px;
  padding: 10px;
}

h3 {
  font-style: italic;
  font-size: 20px;
  color: #000000;
  line-height: 22px;
}

h4 {
  font-weight: bold;
  font-size: 14px;
  color: #4A4A4A;
  line-height: 17px;
}

h2, h3, h4, h5 {
  padding:10px;
  padding-left: 5%;
  padding-right: 5%;
}


.date-text {
  font-style: italic;
  font-size: 14px;
  color: #999999;
  line-height: 16px;
  float: left;
}

.location-text {
  font-style: italic;
  font-size: 14px;
  color: #999999;
  line-height: 16px;
  float: right;

}

p {
  font-size: 14px;
  color: #333333;
  line-height: 21px;
}

a {
  color: #1199C3;
  text-decoration: none;
  margin-top: 10px;
  display: block;
}

.welcome-message {
  font-style: italic;
  font-size: 18px;
  color: #F3F3F3;
  line-height: 28px;
}

#skillsH3 {
  color: #F5AE23;
  display: none;
}

.orange {
  background-color: #F5AE23;
}

.orange-text {
  color: #F5AE23;
}

.white-text {
  font-weight: bold;
  color: #FFFFFF;
}

.gray {
  background-color: #F3F3F3;
  padding-bottom: 10px;
  clear:both;
}

.dark-gray {
  background-color: #4A4A4A;
}

/* TODO: Replace with image later */
#header {
  background-color: #484848;
}

.flex-box {
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 10px;
}

.center-content {
  padding-top: 2.5%;
  padding-left: 5%;
  padding-right: 5%;
  padding-bottom: 2.5%
}

ul {
  list-style-type: none;
}

.biopic {
  float: left;
  padding: 10px;
  width: 200px;
  display: none;
}

img {
  padding: 10px;
}

/* Bar chart stuff */
.chart div {
  font: 10px sans-serif;
  background-color: #4A4A4A;
  text-align: right;
  padding: 3px;
  margin: 1px;
  height: 12px;
  color: white;
  display: inline-block;
}

span {
  padding: 5px;
}

#letsConnect {
  text-align: center;
}

@media only screen and (max-width: 1024px) {
  #letsConnect {
    margin-top: 5%;
  }
}

@media only screen and (max-width:900px) {
  .biopic {
    width: 175px;
  }
}

@media only screen and (max-width: 750px) {
  #letsConnect {
    margin-top: 10%;
  }
  .biopic {
    width: 150px;
  }
  .welcome-message {
    display: none;
  }
}

#map {
  display: block;
  height: 100%;
  margin-left: 5%;
  margin-right: 5%;
}

#mapDiv {
  height: 400px;
  width: 100%;
  padding-bottom: 5%;
}

@media only screen and (min-width: 750px) {
  #skillsH3,
  .biopic {
    display: block;
  }
}

